--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbDevice.cs" />
+    <Compile Include="DbSample.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -135,6 +136,7 @@
     <Compile Include="MyDateTimeSeries.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
