--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -126,6 +126,8 @@
   <ItemGroup>
     <Compile Include="DbDevice.cs" />
     <Compile Include="DbSample.cs" />
+    <Compile Include="DbSession.cs" />
+    <Compile Include="DbSessionhaschannel.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -137,6 +139,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
+    <Compile Include="Session.cs" />
+    <Compile Include="Sessionhaschannel.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
