Added USB205.cs class to store data from measurement device. Code cleanup.

--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Sample.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Sessionhaschannel.cs" />
+    <Compile Include="USB205.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
