Added 2nd View (From line Error). This View allows to add informations about line Error  (idMachine, info, stopTime, stopTimeLength). Added also DbEvent.cs and Event.cs class to handle CRUD requests from new database table (event table).

--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -125,10 +125,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbDevice.cs" />
+    <Compile Include="DbEvent.cs" />
     <Compile Include="DbSample.cs" />
     <Compile Include="DbSession.cs" />
     <Compile Include="DbSessionhaschannel.cs" />
     <Compile Include="Device.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +163,9 @@
     <EmbeddedResource Include="Forms\FormDataCollector.resx">
       <DependentUpon>FormDataCollector.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormLineError.resx">
+      <DependentUpon>FormLineError.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -169,6 +174,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -186,6 +192,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
