--- a/App.config
+++ b/App.config
@@ -9,6 +9,18 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MindFusion.Common" publicKeyToken="dd7449df9ffcc455" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.5.451" newVersion="1.3.5.451" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MindFusion.Svg" publicKeyToken="dd7449df9ffcc455" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.3.451" newVersion="1.2.3.451" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MindFusion.Scripting" publicKeyToken="dd7449df9ffcc455" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.3.452" newVersion="1.0.3.452" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
