--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -199,6 +199,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbOrder.cs" />
+    <Compile Include="DbSessionSettings.cs" />
+    <Compile Include="Forms\FormSessionParams.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormSessionParams.Designer.cs">
+      <DependentUpon>FormSessionParams.cs</DependentUpon>
+    </Compile>
     <Compile Include="Globals.cs" />
     <Compile Include="DbDevice.cs" />
     <Compile Include="DbEvent.cs" />
@@ -226,11 +234,13 @@
       <DependentUpon>FormLineError.cs</DependentUpon>
     </Compile>
     <Compile Include="MyDateTimeSeries.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Sessionhaschannel.cs" />
+    <Compile Include="SessionSettings.cs" />
     <Compile Include="ThemeColor.cs" />
     <Compile Include="USB205.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -241,6 +251,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormLineError.resx">
       <DependentUpon>FormLineError.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormSessionParams.resx">
+      <DependentUpon>FormSessionParams.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -278,6 +291,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MindFusion.Diagramming.js" />
+    <None Include="Resources\refresh_blank.png" />
+    <None Include="Resources\refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
