--- a/USB-205_DataAccquisition.csproj
+++ b/USB-205_DataAccquisition.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Tpdkdesign.net-Refresh-Cl-System-Install-1.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
@@ -199,22 +202,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbOrder.cs" />
-    <Compile Include="DbSessionSettings.cs" />
-    <Compile Include="Forms\FormSessionParams.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormSessionParams.Designer.cs">
-      <DependentUpon>FormSessionParams.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Globals.cs" />
-    <Compile Include="DbDevice.cs" />
-    <Compile Include="DbEvent.cs" />
-    <Compile Include="DbSample.cs" />
-    <Compile Include="DbSession.cs" />
-    <Compile Include="DbSessionhaschannel.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Event.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -227,20 +214,15 @@
     <Compile Include="Forms\FormDataCollector.Designer.cs">
       <DependentUpon>FormDataCollector.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormLineError.cs">
+    <Compile Include="Forms\Settings.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormLineError.Designer.cs">
-      <DependentUpon>FormLineError.cs</DependentUpon>
+    <Compile Include="Forms\Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyDateTimeSeries.cs" />
-    <Compile Include="Order.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sample.cs" />
-    <Compile Include="Session.cs" />
-    <Compile Include="Sessionhaschannel.cs" />
-    <Compile Include="SessionSettings.cs" />
     <Compile Include="ThemeColor.cs" />
     <Compile Include="USB205.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -249,11 +231,8 @@
     <EmbeddedResource Include="Forms\FormDataCollector.resx">
       <DependentUpon>FormDataCollector.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormLineError.resx">
-      <DependentUpon>FormLineError.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormSessionParams.resx">
-      <DependentUpon>FormSessionParams.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -290,9 +269,11 @@
     <None Include="Resources\search1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="MindFusion.Diagramming.js" />
     <None Include="Resources\refresh_blank.png" />
     <None Include="Resources\refresh.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Tpdkdesign.net-Refresh-Cl-System-Install-1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
